# public/swagger.json
@@ -53,6 +53,53 @@
 			"RegisterParticipantType": {
 				"$ref": "#/components/schemas/Omit_Participant.otp-or-id-or-isVerified_"
 			},
+			"Pick_Instructor.Exclude_keyofInstructor.otp-or-id-or-isVerified__": {
+				"properties": {
+					"createdAt": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"phoneNumber": {
+						"type": "string"
+					},
+					"profilePic": {
+						"type": "string"
+					},
+					"updatedAt": {
+						"type": "string"
+					},
+					"resume": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"firstName",
+					"lastName",
+					"password",
+					"resume"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Instructor.otp-or-id-or-isVerified_": {
+				"$ref": "#/components/schemas/Pick_Instructor.Exclude_keyofInstructor.otp-or-id-or-isVerified__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"RegisterInstructorType": {
+				"$ref": "#/components/schemas/Omit_Instructor.otp-or-id-or-isVerified_"
+			},
 			"Health": {
 				"properties": {
 					"msg": {
@@ -110,7 +157,7 @@
 				}
 			}
 		},
-		"/api/auth/verify/participantemail": {
+		"/api/auth/verify/participant-email": {
 			"post": {
 				"operationId": "VerifyParticipantEmail",
 				"responses": {
@@ -152,7 +199,7 @@
 				}
 			}
 		},
-		"/api/auth/resend/participantotp": {
+		"/api/auth/resend/participant-otp": {
 			"post": {
 				"operationId": "ResendParticipantOTP",
 				"responses": {
@@ -232,7 +279,7 @@
 				}
 			}
 		},
-		"/api/auth/forgot/participantpassword": {
+		"/api/auth/forgot/participant-password": {
 			"post": {
 				"operationId": "ForgotParticipantPassword",
 				"responses": {
@@ -270,7 +317,7 @@
 				}
 			}
 		},
-		"/api/auth/reset/participantpassword": {
+		"/api/auth/reset/participant-password": {
 			"post": {
 				"operationId": "ResetParticipantPassword",
 				"responses": {
@@ -312,7 +359,7 @@
 				}
 			}
 		},
-		"/api/auth/update/participantpassword": {
+		"/api/auth/update/participant-password": {
 			"post": {
 				"operationId": "UpdateParticipantPassword",
 				"responses": {
@@ -350,6 +397,158 @@
 									"newPassword",
 									"email",
 									"currentPassword"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/register/instructor": {
+			"post": {
+				"operationId": "RegisterInstructor",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RegisterInstructorType"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/verify/instructor-email": {
+			"post": {
+				"operationId": "VerifyInstructorEmail",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"verification_code": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"verification_code",
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/resend/instructor-otp": {
+			"post": {
+				"operationId": "ResendInstructorOTP",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/login/instructor": {
+			"post": {
+				"operationId": "LoginInstructor",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"password": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"password",
+									"email"
 								],
 								"type": "object"
 							}
